# pulse

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
.config/: nextest.toml
.githooks/: .gitattributes  commit-msg  pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
assets/: gen-icons.ps1  gen-social.ps1  window-icon-48.rgba
docs/: README.md  controller-api.md  p2-blocks-ui-spec.md  p3-composer-v1-spec.md  p4-composer-v2-spec.md  p5-controller-api-spec.md  p6-shells-spec.md  qol-spec.md  remote-cli-resume-spec.md  selector-ui-spec.md  sleep-spec.md  ssh-drop-spec.md
installer/: publish.ps1
scripts/: bootstrap-hooks.ps1  meta-lint-allowlist.txt  meta-lint.ps1
src/: claude_hooks.rs  codex_hooks.rs  ctl.rs  main.rs  palette.rs  probe.rs  protocol.rs  ssh_transport.rs  state.rs  strip.rs  win32_input.rs
src/daemon/: anchors.rs  blocks.rs  bootstrap.rs  claude_registry.rs  control.rs  ctl_tokens.rs  frame.rs  journal.rs  mod.rs  perf.rs  procinfo.rs  reconnect.rs  reestablish.rs  remote_probe.rs  serialize.rs  session.rs  tracker.rs  waiters.rs
src/gui/: bindings.rs  central.rs  complete.rs  composer.rs  consent.rs  drop.rs  fuzzy.rs  glyph_cache.rs  highlight.rs  history.rs  icons.rs  import.rs  ipc.rs  launcher.rs  lifecycle_ui.rs  mod.rs  modals.rs  settings.rs  shells.rs  sidebar.rs  ssh_drop.rs  term_backend.rs  term_view.rs  theme.rs  toast.rs  update.rs
